# bogeyman

./: .gitignore  CMakeLists.txt  README.md
inc/bogeyman/: Logger.hpp  Logger.ipp  assert.hpp  options.hpp
inc/bogeyman/internal/: action_on_failure.hpp  print_error_line.hpp
samples/: CMakeLists.txt  abort_and_print.cpp  additions.cpp  do_nothing.cpp  log_everything.cpp  log_to_file_and_exit.cpp
